# Vinkan

./: .gitignore  CMakeLists.txt  README.md  sources.cmake
examples/compute/: CMakeLists.txt  addition_shader.comp  addition_shader.comp.spv  addition_shader.slang  addition_shader.spv  m_series_portability.hpp  main.cpp
examples/hello_triangle/: CMakeLists.txt  extensions.hpp  fragment.slang  fragment.spv  hello_triangle.hpp  main.cpp  vertex.slang  vertex.spv
src/vinkan/: command_coordinator.hpp  device.hpp  device_builder.hpp  glfw_vk_surface.cpp  glfw_vk_surface.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  sync_mechanisms.hpp  vinkan.hpp  vinkan_resources.hpp
src/vinkan/generics/: concepts.hpp  ptr_handle_wrapper.hpp
src/vinkan/glfw/: glfw_vk_surface.cpp  glfw_vk_surface.hpp
src/vinkan/logging/: logger.hpp
src/vinkan/models/: model.hpp  model_base.hpp
src/vinkan/pipelines/: pipelines.hpp  shader_module_maker.cpp  shader_module_maker.hpp
src/vinkan/render/: render_stage.hpp
src/vinkan/resources/: resources.hpp  resources_binder.hpp  vinkan_resources.hpp
src/vinkan/structs/: descriptors_structs.hpp  pipeline_info.hpp  queue_family_info.hpp  sharing_mode.hpp  surface_support_details.hpp
src/vinkan/utils/: file_io.hpp
src/vinkan/wrappers/: buffer.cpp  buffer.hpp  device.hpp  device_builder.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  render_pass.hpp  render_pass_builder.hpp  swapchain.cpp  swapchain.hpp
src/vinkan/wrappers/descriptors/: descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp
